--- a/Templates/Contact.html
+++ b/Templates/Contact.html
@@ -1,12 +1,17 @@
-<h6>Mail me</h6><a href="codingworld412@gmail.com">at this ID.</a>
-<h6>I will definitely reply out !<h/h6>
-  
- <style>
-   h6{
-     color: black;
-   }
-   a{
-     text-decoration: none;
-     color: blue;
-   }
-  </style>
+<!DOCTYPE html>
+{% include "Header.html" %}
+<h1>Contact Us</h1>
+
+<p>Mail me at codingworld412@gmail.com<br>I will definitely reply you !</p>
+
+<style>
+    h1{
+        color: green;
+        text-align: center;
+    }
+    p{
+        color: red;
+        text-align: center;
+        font-size: 33px;
+    }
+</style>
