--- a/Templates/Contact.html
+++ b/Templates/Contact.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 {% include "Header.html" %}
-<h1>Contact Us</h1>
+<h1 class="heading">Contact Us</h1>
 
 <p>Mail me at codingworld412@gmail.com<br>I will definitely reply you !</p>
 
 <style>
-    h1{
+    .heading{
         color: green;
         text-align: center;
     }
