--- a/Templates/Contact.html
+++ b/Templates/Contact.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 {% include "Header.html" %}
+
+<title>Contact Us | CodingWorld</title>
 <h1 class="heading">Contact Us</h1>
 
 <p>Mail me at codingworld412@gmail.com<br>I will definitely reply you !</p>
