--- a/Templates/Contact.html
+++ b/Templates/Contact.html
@@ -16,4 +16,8 @@
         text-align: center;
         font-size: 33px;
     }
+    @media screen and (max-width:1024px) {
+        .heading{
+            margin-top: 150px;
+        }
 </style>
