--- a/Templates/Header.html
+++ b/Templates/Header.html
@@ -107,7 +107,7 @@ function myFunction() {
   @media screen and (max-width:1024px) {
    .options{
       margin-top: 82px;
-      
+      margin-left:30px
     }
     .signup{
       margin-right: 33px;
