--- a/Templates/Python_Video_2.html
+++ b/Templates/Python_Video_2.html
@@ -222,6 +222,9 @@
         .download_btn{
             font-size: 51px;
         }
+        .fa fa-clone{
+            display: none;
+        }
     }
 </style>
 
