--- a/Templates/Playlists.html
+++ b/Templates/Playlists.html
@@ -59,13 +59,27 @@
     }
     @media screen and (max-width: 1024px) {
         .bg_python_course{
-            width: 42vw;
-            margin-left: 14px;
+            width: 93vw;
+            margin-left: 21px;
             margin-top: 42px;
-            height: 620px;
+            height: 110vw;
         }
         .thumbnail_1{
-            width: 42vw;
+            width: 93vw;
+            height: 50vw;
+        }
+        .heading_python_course{
+            font-size: 51px;
+        }
+        .description_python_course{
+            font-size: 42px;
+        }
+        .btn_1{
+            font-size: 42px;
+            padding: 14px;
+        }
+        .btn_1:hover{
+            padding: 21px;
         }
     }
 </style>
