--- a/Templates/List_Python_Course.html
+++ b/Templates/List_Python_Course.html
@@ -2,13 +2,13 @@
 <h1>Course : Python Tutorial For Beginners </h1>
 
 <div>
-    <b><input type="checkbox"><a href="/python-tutorial-0"><l>Python Course Announcement</l></a></b>
+    <b><a href="/python-tutorial-0"><l>Python Course Announcement</l></a></b>
     <br>
     <br>
-    <b><input type="checkbox"><a href="/python-tutorial-1"><l>Python Tutorial 1 | What is Programming ?</l></a></b>
+    <b><a href="/python-tutorial-1"><l>Python Tutorial 1 | What is Programming ?</l></a></b>
     <br>
     <br>
-    <b><input type="checkbox"><a href="/python-tutorial-2"><l>Python Tutorial 2 | Installation Process</l></a></b>
+    <b><a href="/python-tutorial-2"><l>Python Tutorial 2 | Installation Process</l></a></b>
     <br>
     <br>
 </div>
