--- a/Templates/List_Python_Course.html
+++ b/Templates/List_Python_Course.html
@@ -11,6 +11,9 @@
     <b><a href="/python-tutorial-2"><l>Python Tutorial 2 | Installation Process</l></a></b>
     <br>
     <br>
+    <b><a href="/python-tutorial-3"><l>Python Tutorial 3 | Variables and Data Types</l></a></b>
+    <br>
+    <br>
 </div>
 
 <style>
