--- a/Templates/Python_Video_3.html
+++ b/Templates/Python_Video_3.html
@@ -98,9 +98,10 @@
     
 <style>
     .video_1 {
-        margin-top: -500px;
+        position: absolute;
         width: 950px;
         height: 534px;
+        margin-top: -200px;
         margin-left: 28px;
     }
     .br{
