--- a/Templates/Python_Video_3.html
+++ b/Templates/Python_Video_3.html
@@ -143,6 +143,9 @@
             margin-left: 28px;
             margin-top: 50px;
         }
+        .para{
+            margin-top: 580px;
+        }
         .download_btn{
             font-size: 51px;
         }
