--- a/Templates/About.html
+++ b/Templates/About.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>About | CodingWorld</title>
+    <link rel="shortcut icon" href="https://i.ibb.co/tKRp6G1/coding.png" type="image/x-icon">
 </head>
 
 <b>
