--- a/Templates/Home.html
+++ b/Templates/Home.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>Home | CodingWorld</title>
+    <link rel="shortcut icon" href="https://i.ibb.co/tKRp6G1/coding.png" type="image/x-icon">
   </head>
 
   <p class="welcome_msg">&ensp; &ensp; Welcome to</p>
