--- a/Templates/Python_Video_0.html
+++ b/Templates/Python_Video_0.html
@@ -2,6 +2,7 @@
 {% include "List_Python_Course.html" %}
 
 <title>Python Course Announcement</title>
+<link rel="shortcut icon" href="https://i.ibb.co/tKRp6G1/coding.png" type="image/x-icon">
 
 <iframe class="video_1" src="https://www.youtube.com/embed/fKl-ld9BMLs" allowfullscreen></iframe>
 
