--- a/Templates/Python_Video_2.html
+++ b/Templates/Python_Video_2.html
@@ -2,6 +2,7 @@
 {% include "List_Python_Course.html" %}
 
 <title>Python Tutorial 2</title>
+<link rel="shortcut icon" href="https://i.ibb.co/tKRp6G1/coding.png" type="image/x-icon">
 
 <iframe class="video_1" src="https://youtube.com/embed/jSAunyN5kdw" allowfullscreen></iframe>
 
